map, adding journey implemented
