# src/app/api/models/journey-dto.ts
@@ -4,10 +4,10 @@ import { AddressDto } from '../models/address-dto';
 import { PlaceDto } from '../models/place-dto';
 export interface JourneyDto {
   destination?: Array<AddressDto>;
-  end_date?: string;
+  endDate?: string;
   id?: string;
-  places_to_visit?: Array<PlaceDto>;
-  start_date?: string;
-  start_place?: Array<AddressDto>;
+  placesToVisit?: Array<PlaceDto>;
+  startDate?: string;
+  startPlace?: Array<AddressDto>;
   user?: string;
 }
