# src/app/api/models/place-dto.ts
@@ -1,7 +1,7 @@
 /* tslint:disable */
 /* eslint-disable */
-import { AddressDto } from '../models/address-dto';
 export interface PlaceDto {
-  phone_number?: string;
-  place_address?: Array<AddressDto>;
+  coordinates?: Array<number>;
+  name?: string;
+  type?: string;
 }
